tests/testcases/errors/selective-import-2.boo
"""
selective-import-2.boo(4,15): BCE0019: 'NoWayThisNameIsThere' is not a member of 'System'.
"""
import System(NoWayThisNameIsThere)
